--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           otp-version: "25.1.2"
           elixir-version: "1.14.1"
+      - name: Install apt packages
+        run: sudo apt install -y inotify-tools
       - name: Install Nerves bootstrap
         run: mix archive.install --force hex nerves_bootstrap
       - name: Checkout repository
